Basic Transition styles (Desktop) - Fade-in-out mega-menu

--- a/eaton.frontend/src/components/header/css/header.scss
+++ b/eaton.frontend/src/components/header/css/header.scss
@@ -69,4 +69,16 @@
       }
     }
   }
+
+  //-----------------------------------
+  // Desktop Breakpoint
+  //-----------------------------------
+  @include media-desktop-and-up {
+    &.level-2-open {
+      .mega-menu {
+        visibility: visible;
+        opacity: 1;
+      }
+    }
+  }
 }
