--- a/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
+++ b/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
@@ -35,4 +35,13 @@
     transform: translate(100%);
     visibility: hidden;
   }
+
+  //-----------------------------------
+  // Desktop Breakpoint
+  //-----------------------------------
+  @include media-desktop-and-up {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.1s ease-in-out;
+  }
 }
