added anchor target to main cta / fixed some lint error

--- a/eaton.frontend/src/components/featured-topic/css/featured-topic.scss
+++ b/eaton.frontend/src/components/featured-topic/css/featured-topic.scss
@@ -42,7 +42,7 @@
 
   @include media-desktop-and-up {
     &__list-left {
-      &:after {
+      &::after {
         background: $color__secondary-gray3;
         content: '';
         height: 85%;
