[M-11]  title component  updates

--- a/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-product-overview.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-product-overview.scss
@@ -15,21 +15,7 @@ $size-xl: 120px;
 
   padding:  $size-xl 0;
 
-  &__header {
-    h1 {
-      color: $color__primary-blue;
-      font-size: 52px;
-      margin:  0;
-    }
 
-    &__dash {
-      display: block;
-      width: 68px;
-      height: 4px;
-      margin:  $size-md 0;
-      background-color: $color__primary-blue;
-    }
-  }
 
 
   &__content {
@@ -66,3 +52,32 @@ $size-xl: 120px;
     text-decoration: none;
   }
 }
+
+
+
+
+
+
+
+  .eaton-title {
+
+    &__eyebrow {
+      color: $color__primary-blue;
+      font-size: 52px;
+      margin:  0;
+    }
+
+    &__dash {
+      display: block;
+      width: 68px;
+      height: 4px;
+      margin:  $size-md 0;
+      background-color: $color__primary-blue;
+    }
+
+    &__byline {
+      font-size: 12px;
+      margin-top:  15px;
+    }
+
+  }
