--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
@@ -34,12 +34,14 @@
 
 .eaton-page-overview { padding: 120px 0; }
 
-.eaton-page-overview__header h1 { color: #005EB8; font-size: 52px; margin: 0; }
-
-.eaton-page-overview__header__dash { display: block; width: 68px; height: 4px; margin: 60px 0; background-color: #005EB8; }
-
 .eaton-page-overview__cta { text-align: center; }
 
 .eaton-cta-button { background-color: #FFF; color: #005EB8; border: 2px solid #005EB8; padding: 20px 40px; display: inline-block; max-width: 600px; text-align: center; margin: 60px 0 0; text-decoration: none; }
 
 .eaton-cta-button:hover { background-color: #005EB8; color: #FFF; text-decoration: none; }
+
+.eaton-title__eyebrow { color: #005EB8; font-size: 52px; margin: 0; }
+
+.eaton-title__dash { display: block; width: 68px; height: 4px; margin: 60px 0; background-color: #005EB8; }
+
+.eaton-title__byline { font-size: 12px; margin-top: 15px; }
