--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -29,7 +29,7 @@
 
 .eaton-header { position: relative; }
 
-@media screen and (max-width: 991px) { .eaton-header .eaton-logo { margin: 20px 30px; } }
+@media screen and (max-width: 991px) { .eaton-header .eaton-logo { margin: 20px 30px 20px 15px; } }
 
 @media screen and (min-width: 992px) { .eaton-header .eaton-logo { margin: 20px 15px 16px; }
   .eaton-header--fixed { position: fixed; width: 100%; z-index: 20; }
@@ -37,7 +37,7 @@
   .eaton-header--fixed .eaton-logo__link { width: 126px; height: 40px; -webkit-transition: height 0.3s ease-in-out, width 0.3s ease-in-out; transition: height 0.3s ease-in-out, width 0.3s ease-in-out; } }
 
 @media screen and (max-width: 991px) { .nav-open .eaton-link-list-primary-nav { height: 100%; visibility: visible; overflow: auto; }
-  .nav-open.level-2-open { overflow: hidden; position: fixed; }
+  .nav-open.level-2-open { overflow: hidden; position: fixed; width: 100%; }
   .nav-open.level-2-open .mega-menu { visibility: visible; -webkit-transform: translate(0); transform: translate(0); } }
 
 @media screen and (min-width: 992px) { .nav-open.level-2-open .mega-menu { visibility: visible; opacity: 1; } }
