--- a/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
+++ b/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
@@ -20,6 +20,11 @@
     }
   }
 
+  &__category {
+    background: $color__primary-gray2;
+    padding: 30px 0;
+  }
+
   //-----------------------------------
   // Mobile Breakpoint
   //-----------------------------------
