--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/view-vertical.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/view-vertical.html
@@ -3,9 +3,7 @@
   <div class="eaton-link-list-vertical">
 
     <!--/* If Eyebrow */-->
-    <sly data-sly-test="${ data.view.eyebrow }">
-      <h4 class="eaton-link-list-vertical__eyebrow eyebrow-small">${ data.view.eyebrow }</h4>
-    </sly>
+    <div data-sly-test="${ data.view.eyebrow }" class="eaton-link-list-vertical__eyebrow eyebrow-small">${ data.view.eyebrow }</div>
 
     <!--/* List Links */-->
     <ul
