--- a/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
+++ b/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
@@ -15,7 +15,6 @@
   z-index: 2;
 
   &__content {
-    margin-bottom: 20px;
     color: $color__white;
 
     &--active {
@@ -25,7 +24,7 @@
 
   &__category {
     background: $color__primary-gray2;
-    padding: 30px 0;
+    padding: $spacing__sm 0;
   }
 
   //-----------------------------------
