Cleanup HTML - Existing Components

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-product-overview.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-product-overview.html
@@ -1,38 +1,36 @@
 <sly data-sly-use.data="../data/view-product-overview-data.js">
 
+  <div class="eaton-page-overview">
 
+    <div class="container">
+      <div class="row">
 
-    <div class="eaton-page-overview">
-        <div class="row">
+        <div class="eaton-page-overview__header col-xs-12 col-sm-6">
+          <div class="eaton-page-overview__title">
+            <sly data-sly-resource="${'page-overview-text' @ resourceType='/apps/eaton/static-components/general/title'}"></sly>
+          </div>
 
-            <div class="eaton-page-overview__header col-xs-12 col-sm-6">
-
-             <div>
-                 <sly data-sly-resource="${'page-overview-text' @ resourceType='/apps/eaton/static-components/general/title'}"></sly>
-             </div>
-
-             <div class="hidden-xs text-center">
-                <sly data-sly-resource="${'page-overview-ctabutton' @ resourceType='/apps/eaton/static-components/general/ctabutton'}"></sly>
-            </div>
-
-            </div>
-
-
-            <div class="eaton-page-overview__content col-xs-12 col-sm-6">
-                <sly data-sly-resource="${'page-overview-text' @ resourceType='/apps/eaton/static-components/general/text'}"></sly>
-            </div>
+          <div class="eaton-page-overview__cta hidden-xs text-center">
+            <sly data-sly-resource="${'page-overview-ctabutton' @ resourceType='/apps/eaton/static-components/general/ctabutton'}"></sly>
+          </div>
         </div>
 
-        <div class="row">
-            <div class="visible-xs text-center">
 
-                <sly data-sly-resource="${'page-overview-ctabutton' @ resourceType='/apps/eaton/static-components/general/ctabutton'}"></sly>
-
-            </div>
-
+        <div class="eaton-page-overview__content col-xs-12 col-sm-6">
+          <div class="eaton-page-overview__text">
+            <sly data-sly-resource="${'page-overview-text' @ resourceType='/apps/eaton/static-components/general/text'}"></sly>
+          </div>
         </div>
+
+      </div>
+
+      <div class="row">
+        <div class="eaton-page-overview__cta visible-xs text-center">
+          <sly data-sly-resource="${'page-overview-ctabutton' @ resourceType='/apps/eaton/static-components/general/ctabutton'}"></sly>
+        </div>
+      </div>
 
     </div>
-
+  </div>
 
 </sly>
