--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-landing-hero.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-landing-hero.html
@@ -1,6 +1,6 @@
-<div data-sly-use.data="../data/view-landing-hero-single-data.js" class="carousel-component carousel slide" data-ride="carousel" data-pause="hover">
+<div data-sly-use.data="../data/view-landing-hero-multiple-data.js" class="carousel-component carousel slide" data-ride="carousel" data-pause="hover">
     <!-- Indicators -->
-    <ol class="carousel-indicators" data-sly-list.slide="${data}">
+    <ol class="carousel-indicators" data-sly-list.slide="${data.hero}">
         <li data-target=".carousel-component" data-slide-to="${slideList.index}" class="carousel-component__dots ${slideList.index == 0 ? 'active' : ''}"></li>
     </ol>
     <div class="carousel-component__down-arrow visible-xs">
@@ -8,24 +8,24 @@
     </div>
 
     <!-- Wrapper for slides -->
-    <div class="carousel-component-slide carousel-inner" data-sly-list.slide="${data}" role="listbox">
+    <div class="carousel-component-slide carousel-inner" data-sly-list.slide="${data.hero}" role="listbox">
         <div class="item ${slideList.index == 0 ? 'active' : ''}">
-            <img class="img-responsive hidden-xs" src="${slide.image}" alt="${data.alt}">
-            <img class="img-responsive visible-xs" src="${slide.mobile_image}" alt="${data.alt}">
+            <img class="img-responsive hidden-xs" src="${slide.image}" alt="${slide.alt}">
+            <img class="img-responsive visible-xs" src="${slide.mobile_image}" alt="${slide.alt}">
             <div class="carousel-component-slide__caption carousel-caption">
-                <h1 class="carousel-component-slide__title">${slide.title}</h1>
+                <h2 class="carousel-component-slide__title">${slide.title}</h2>
                 <p class="carousel-component-slide__text">${slide.text}</p>
-                <input class="carousel-component-slide__cta b-button b-button--light" type="button" value="See how">
+                <a class="carousel-component-slide__cta b-button b-button--light" href="${data.cta}" role="button">See how</a>
             </div>
         </div>
         <!-- Controls -->
-        <a class="left carousel-control" href=".carousel-component" role="button" data-slide="prev" data-sly-test="${slideList.count > 1}">
+        <button class="carousel-component__arrow left carousel-control hidden-xs" href=".carousel-component" role="button" data-slide="prev" data-sly-test="${slideList.count > 1}">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href=".carousel-component" role="button" data-slide="next" data-sly-test="${slideList.count > 1}">
+        </button>
+        <button class="carousel-component__arrow right carousel-control hidden-xs" href=".carousel-component" role="button" data-slide="next" data-sly-test="${slideList.count > 1}">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
-        </a>
+        </button>
     </div>
 </div>
