--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-single-feature.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-single-feature.html
@@ -1,15 +1,17 @@
 <sly data-sly-use.data="../data/view-single-feature-data.js">
     <div class="eaton-single-feature">
-      <p class="eaton-single-feature__headline">${data.headline}</p>
-      <img class="eaton-single-feature__img" src="${data.image}"/>
+      <p class="eaton-single-feature__headline eyebrow-small">${data.headline}</p>
+      <div class="eaton-single-feature__image">
+        <img class="img-responsive" src="${data.image}" alt=${data.headline} />
+      </div>
       <div class="eaton-single-feature__content">
           <!--/* Eyebrow */-->
           <div class="eaton-single-feature__eyebrow eyebrow-small">${ data.eyebrow }</div>
 
           <!--/* List Links */-->
           <ul data-sly-list="${ data.links }" class="eaton-single-feature__links">
-            <li class="eaton-single-feature__item">
-              <a href="${ item.url }" aria-label="Go to ${ item.title }" target="${ item.target }">
+            <li>
+              <a href="${ item.url }" class="eaton-single-feature__item" aria-label="Go to ${ item.title }" target="${ item.target }">
                 <span>${ item.title }</span>
                 <i class="glyphicon glyphicon-menu-right" aria-hidden="true"></i>
               </a>
