--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
@@ -12,3 +12,19 @@
 
 @media only screen and (min-width: 768px) and (max-width: 991px) { .category-hightlight-header-header__image { height: 300px; /*background-image: url(/content/dam/eaton/images/story_boardtablet.png);*/ }
   .category-hightlight-header__title { font-size: 3em; } }
+
+.eaton-single-feature__headline, .eaton-single-feature__image { margin-bottom: 30px; }
+
+.eaton-single-feature__headline, .eaton-single-feature__eyebrow { text-transform: uppercase; }
+
+.dark-theme .eaton-single-feature__headline, .dark-theme .eaton-single-feature__eyebrow { color: #FFF; }
+
+.eaton-single-feature__image { max-width: 300px; }
+
+.eaton-single-feature__eyebrow { margin-bottom: 15px; }
+
+.eaton-single-feature__links { padding: 0; margin: 0; list-style-type: none; }
+
+.eaton-single-feature__item { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; padding: 10px 0; text-decoration: none; }
+
+.dark-theme .eaton-single-feature__item { color: #FFF; }
