--- a/eaton.frontend/src/components/list/css/list.scss
+++ b/eaton.frontend/src/components/list/css/list.scss
@@ -1,6 +1,10 @@
 // Import All SASS config files (Variables, Mixins, Functions, Extends etc...)
 @import "../../../global/css/_config/sass";
 
+.list-default {
+  font-family: $font-family__primary;
+}
+
 .category__image {
   width: 100%;
   max-height: 361px;
@@ -27,10 +31,31 @@
 
 a {
   color: $color__primary-blue;
+  text-decoration: none;
+
+  &:hover,
+  &:active,
+  &:visited,
+  &:focus {
+    color: $color__primary-blue;
+    text-decoration: none;
+  }
 }
 
-.carousel-buttons a {
+.carousel-button {
   font-size: 2em;
+  background-color: $color__primary-blue;
+  //$color__primary-gray3;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  display: inline-block;
+  border: 0;
+  margin-left: 4px;
+  margin-right: 4px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  text-decoration: none;
 }
 
 .category__item-innerpadding {
@@ -56,7 +81,7 @@ a {
 
 @media only screen and (min-width: 320px) and (max-width: 767px) {
   .carousel__item {
-    min-height: 220px;
+    min-height: 227px;
   }
 
   .card-container--topmargin {
@@ -74,6 +99,10 @@ a {
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
+  .category-item-date {
+    padding-top: 15px;
+  }
+
   .related-category--tablet-left {
     float: left;
   }
@@ -112,7 +141,7 @@ a {
 
   .category__item,
   .category__image {
-    min-height: 203px;
+    min-height: 263px;
   }
 
   .category__link--font {
