--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-default.html
@@ -1,29 +1,18 @@
 <sly data-sly-use.data="../data/view-default-data.js">
     <div class="list-default container-fluid">
     
-        <!--/* Desktop layout */-->
-        <div class="row hidden-xs visible-sm visible-md visible-lg card-container--topmargin">
-            <div class="col-sm-10 col-sm-offset-1 col-md-4 col-md-offset-2 equal-height-row">
+        <!--/* Desktop/Tablet Layout */-->
+        <div class="row hidden-xs visible-sm visible-md visible-lg card-container--topmargin" data-sly-list.slider="${data}" role="listbox">
+            <div class="col-sm-10 col-sm-offset-1 col-md-4 equal-height-row ${sliderList.index == 0 ? 'col-md-offset-2' : 'col-md-offset-0'}">
                 <div class="related-category--tablet-left">
-                    <img src="${data.leftImage}" class="img-responsive category__image"/>
+                    <img src="${slider.image}" class="img-responsive category__image" alt="${slider.image_alt}"/>
                 </div>
                 <div class="category__item--border category__item-innerpadding related-category--tablet-right category__item">
-                    <div class="related-category__title--font category__title--bottompadding">${data.leftTitle}</div>
+                    <div class="related-category__title--font category__title--bottompadding">${slider.title}</div>
                     <div>
-                        <a class="category__link--font" href="${data.leftLinkURL}">${data.leftLinkText}</a>
+                        <a class="category__link--font" href="${slider.link_url}">${slider.link_text}</a>
                     </div>
-                </div>
-            </div>
-
-            <div class="col-sm-10 col-sm-offset-1 col-md-4 col-md-offset-0 equal-height-row">
-                <div class="related-category--tablet-left">
-                    <img src="${data.righImage}" class="img-responsive category__image"/>
-                </div>
-                <div class="category__item--border category__item-innerpadding related-category--tablet-right category__item">
-                    <div class="related-category__title--font category__title--bottompadding">${data.rightTitle}</div>
-                    <div>
-                        <a class="category__link--font" href="${data.rightLinkURL}">${data.rightLinkText}</a>
-                    </div>
+                    <p class="visible-sm category-item-date"><em>${slider.date_text}</em></p>
                 </div>
             </div>
         </div>
@@ -31,32 +20,32 @@
         <!--/* Mobile slider */-->
         <div class="row visible-xs card-container--topmargin">
             <div class="col-xs-10 col-xs-offset-1">
-                <div id="myCarousel" class="carousel slide">
+                <div class="default-view-carousel-component carousel slide">
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img src="${data.leftImage}" class="img-responsive category__image" />
+                            <img src="${data[1].mobile_image}" class="img-responsive category__image" alt="${data[0].image_alt}"/>
                             <div class="category__item--border category__item-innerpadding carousel__item">
-                                <div class="related-category__title--font category__title--bottompadding">${data.leftTitle}</div>
+                                <div class="related-category__title--font category__title--bottompadding">${data[0].title}</div>
                                 <h5>
-                                    <a class="category__link--font" href="${data.leftLinkURL}">${data.leftLinkText}</a>
+                                    <a class="category__link--font" href="${data[0].link_url}">${data[0].link_text}</a>
                                 </h5>
                             </div>
                         </div>
 
                         <div class="item">
-                            <img src="${data.righImage}" class="img-responsive category__image" />
+                            <img src="${data[1].mobile_image}" class="img-responsive category__image" alt="${data[1].image_alt}"/>
                             <div class="category__item--border category__item-innerpadding carousel__item">
-                                <div class="related-category__title--font category__title--bottompadding">${data.rightTitle}</div>
+                                <div class="related-category__title--font category__title--bottompadding">${data[1].title}</div>
                                 <h5>
-                                    <a class="category__link--font" href="${data.rightLinkURL}">${data.rightLinkText}</a>
+                                    <a class="category__link--font" href="${data[1].link_url}">${data[1].link_text}</a>
                                 </h5>
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-buttons">
+                    <div>
                         <div class="text-center">
-                            <a data-target="#myCarousel" data-slide-to="0" href="#">&#9679;</a>
-                            <a data-target="#myCarousel" data-slide-to="1" href="#">&#9679;</a>
+                            <button data-target=".default-view-carousel-component" data-slide-to="0" class="carousel-button"><span class="sr-only">1</span></button>
+                            <button data-target=".default-view-carousel-component" data-slide-to="1" class="carousel-button"><span class="sr-only">2</span></button>
                         </div>
                     </div>
                 </div>
