--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
@@ -1,16 +1,18 @@
+.eaton-title-text-image { font-family: "Eaton", Arial, sans-serif; }
+
 .category-hightlight-header__text { font-size: 1.5em; color: #FFF; }
 
 .category-hightlight-header__title { font-size: 3.5em; line-height: 1.192em; color: #FFF; }
 
-.category-hightlight-header__image { /*background-image: url(/content/dam/eaton/images/story_board.png);*/ background-size: cover; height: 450px; }
+.category-hightlight-header__image { background-size: cover; height: 450px; }
 
 .category-hightlight-header--vertical-align { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 
-@media only screen and (max-width: 767px) { .category-hightlight-header__image { height: 400px; /*background-image: url(/content/dam/eaton/images/story_boardphone2.png);*/ }
+@media only screen and (max-width: 767px) { .category-hightlight-header__image { height: 400px; }
   .category-hightlight-header__title { font-size: 2.5em; }
   .category-hightlight-header__text { font-size: 1.3em; } }
 
-@media only screen and (min-width: 768px) and (max-width: 991px) { .category-hightlight-header-header__image { height: 300px; /*background-image: url(/content/dam/eaton/images/story_boardtablet.png);*/ }
+@media only screen and (min-width: 768px) and (max-width: 991px) { .category-hightlight-header-header__image { height: 300px; }
   .category-hightlight-header__title { font-size: 3em; } }
 
 .eaton-single-feature__headline, .eaton-single-feature__image { margin-bottom: 30px; }
