--- a/eaton.frontend/src/components/title-text-image-link/css/views/_view-single-feature.scss
+++ b/eaton.frontend/src/components/title-text-image-link/css/views/_view-single-feature.scss
@@ -38,6 +38,11 @@
     align-items: center;
     padding: ($spacing__sm / 3) 0; // Visually 30px Spacing between items
     text-decoration: none;
+
+    i {
+      font-size: 0.75em;
+      margin-left: 0.25em;
+    }
     
     .dark-theme & {
       color: $color__white;
