--- a/eaton.frontend/src/components/list/css/list.scss
+++ b/eaton.frontend/src/components/list/css/list.scss
@@ -44,8 +44,7 @@ a {
 
 .carousel-button {
   font-size: 2em;
-  background-color: $color__primary-blue;
-  //$color__primary-gray3;
+  background-color: $color__primary-gray3;
   height: 15px;
   width: 15px;
   border-radius: 50%;
@@ -56,6 +55,10 @@ a {
   margin-top: 15px;
   margin-bottom: 15px;
   text-decoration: none;
+}
+
+.carousel-button-active {
+  background-color: $color__primary-blue;
 }
 
 .category__item-innerpadding {
