--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-download-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-download-list.html
@@ -7,10 +7,10 @@
         <li>
           <a href="${item.url}" class="eaton-download-list__item" aria-label="Download ${item.type} for ${ item.title }">
             <i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i>
-            <p class="eaton-download-list__document">
+            <div class="eaton-download-list__document">
                 <span class="eaton-download-list__title">${item.title}</span>
                 <span class="eaton-download-list__size">(${item.type} ${item.size})</span>
-            </p>
+            </div>
           </a>
         </li>
       </ul>
