--- a/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
+++ b/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
@@ -22,6 +22,21 @@
     }
   }
 
+  &__row {
+    display: flex;
+    flex-direction: row;
+  }
+
+  &__col {
+    margin: 0 ($spacing__sm / 2 );
+    .mega-menu__category-item {
+      margin-bottom: $spacing__sm;
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+
   &__category {
     background: $color__primary-gray2;
     padding: $spacing__sm 0;
@@ -39,10 +54,10 @@
     transform: translate(100%);
     visibility: hidden;
 
-    &__category {
-      .mega-menu__category-item {
+    &__row {
+      flex-direction: column;
+      .mega-menu__col {
         margin-bottom: $spacing__sm;
-
         &:last-child {
           margin-bottom: 0;
         }
@@ -57,6 +72,13 @@
     // opacity: 0;
     // visibility: hidden;
     transition: opacity 0.1s ease-in-out;
+
+    &__col {
+      &--4 {
+        flex-basis: 25%;
+      }
+    }
+
   }
 }
 
