--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
@@ -6,13 +6,23 @@
 
 .mega-menu__content--active { display: block; }
 
+.mega-menu__row { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; }
+
+.mega-menu__col { margin: 0 15px; }
+
+.mega-menu__col .mega-menu__category-item { margin-bottom: 30px; }
+
+.mega-menu__col .mega-menu__category-item:last-child { margin-bottom: 0; }
+
 .mega-menu__category { background: #5B6770; padding: 30px 0; }
 
 @media screen and (max-width: 991px) { .mega-menu { position: fixed; top: 109px; bottom: 40px; -webkit-transition: -webkit-transform 0.7s ease-in-out; transition: -webkit-transform 0.7s ease-in-out; transition: transform 0.7s ease-in-out; transition: transform 0.7s ease-in-out, -webkit-transform 0.7s ease-in-out; overflow: auto; -webkit-transform: translate(100%); transform: translate(100%); visibility: hidden; }
-  .mega-menu__category .mega-menu__category-item { margin-bottom: 30px; }
-  .mega-menu__category .mega-menu__category-item:last-child { margin-bottom: 0; } }
+  .mega-menu__row { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
+  .mega-menu__row .mega-menu__col { margin-bottom: 30px; }
+  .mega-menu__row .mega-menu__col:last-child { margin-bottom: 0; } }
 
-@media screen and (min-width: 992px) { .mega-menu { -webkit-transition: opacity 0.1s ease-in-out; transition: opacity 0.1s ease-in-out; } }
+@media screen and (min-width: 992px) { .mega-menu { -webkit-transition: opacity 0.1s ease-in-out; transition: opacity 0.1s ease-in-out; }
+  .mega-menu__col--4 { -ms-flex-preferred-size: 25%; flex-basis: 25%; } }
 
 .eaton-title { position: relative; padding: 30px 0; font-size: 20px; display: -webkit-box; display: -ms-flexbox; display: flex; }
 
