--- a/eaton.frontend/src/components/link-list/css/link-list.scss
+++ b/eaton.frontend/src/components/link-list/css/link-list.scss
@@ -9,3 +9,4 @@
 @import "views/view-vertical";
 @import "views/view-horizontal";
 @import "views/view-primary-nav";
+@import 'views/view-download-list';
