--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
@@ -37,3 +37,21 @@
   .eaton-link-list-primary-nav__items a { margin: 0 15px; padding-right: 5px; padding-left: 5px; color: #333F48; display: -webkit-box; display: -ms-flexbox; display: flex; height: 100%; -webkit-box-align: center; -ms-flex-align: center; align-items: center; font-size: 20px; }
   .eaton-header--fixed .eaton-link-list-primary-nav__items { height: 80px; }
   .eaton-link-list-primary-nav--has-background .eaton-link-list-primary-nav__items { background: none !important; } }
+
+.eaton-download-list__links { padding: 0; margin: 0; list-style-type: none; }
+
+.eaton-download-list__headline { margin-bottom: 15px; text-transform: uppercase; }
+
+.dark-theme .eaton-download-list__headline { color: #FFF; }
+
+.eaton-download-list__item { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; padding: 10px 0; text-decoration: none; margin-bottom: 10px; }
+
+.eaton-download-list__item i { font-size: 0.75em; margin-right: 10px; margin-top: 0.25em; }
+
+.dark-theme .eaton-download-list__item { color: #FFF; }
+
+.eaton-download-list__description, .eaton-download-list__title, .eaton-download-list__size { display: block; }
+
+.eaton-download-list--has-desc__item { margin-bottom: 15px; }
+
+.eaton-download-list--has-desc__headline { margin-bottom: 30px; }
