--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-default.html
@@ -1,4 +1,5 @@
 <sly data-sly-use.data="../data/view-default-data.js">
+
     <div class="list-default container-fluid">
     
         <!--/* Desktop/Tablet Layout */-->
@@ -32,14 +33,20 @@
                             </div>
                         </div>
                     </div>
-                    <div>
-                        <div class="text-center" data-sly-list.slider="${data}">
-                            <button data-target=".default-view-carousel-component" data-slide-to="${sliderList.index}" class="carousel-button ${sliderList.index == 0 ? 'active carousel-button-active' : ''}"><span class="sr-only">${sliderList.index}</span></button>
-                        </div>
+                    <div class="text-center">
+                        <ol class="carousel-indicators list-unstyled">
+                            <li data-target=".default-view-carousel-component" data-slide-to="0" class="active" role="button">
+                                <span class="sr-only">1</span>
+                            </li>
+                            <li data-target=".default-view-carousel-component" data-slide-to="1" role="button">
+                                <span class="sr-only">2</span>
+                            </li>
+                        </ol>
                     </div>
                 </div>
             </div>
         </div>
 
     </div>
+
 </sly>
