Scroll Behaviors - Sticky Navigation

--- a/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
+++ b/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
@@ -8,6 +8,11 @@
 // Import Overrides
 @import "mega-menu-modules";
 
+.container-full {
+  height: 2000px;
+  background: beige;
+}
+
 .mega-menu {
   background: $color__primary-gray1;
   position: absolute;
