--- a/eaton.frontend/src/components/header/css/header.scss
+++ b/eaton.frontend/src/components/header/css/header.scss
@@ -44,7 +44,7 @@
       .eaton-logo__link {
         width: 126px;
         height: 40px;
-        transition: height 0.3s ease-in-out, width 0.3s ease-in-out; // Add transition only when fixed
+        // transition: height 0.3s ease-in-out, width 0.3s ease-in-out; // Add transition only when fixed
       }
     }
   }
