--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
@@ -1,5 +1,7 @@
 @media screen and (max-width: 991px) { .mega-menu .eaton-link-list-vertical__eyebrow { margin-bottom: 15px; } }
 
+.container-full { height: 2000px; background: beige; }
+
 .mega-menu { background: #333F48; position: absolute; width: 100%; z-index: 2; }
 
 .mega-menu__content { color: #FFF; }
